force-app/main/default/objects/Remision__c/Remision__c.object-meta.xml
<CustomObject>
    <label>Remision</label>
    <nameField>
        <displayFormat>REM-{0000}</displayFormat>
        <label>Numero de Remision</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Remisiones</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>