force-app/main/default/objects/Remision__c/fields/Estatus_Entrega__c.field-meta.xml
<CustomField>
    <fullName>Estatus_Entrega__c</fullName>
    <label>Estatus de Entrega</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Pendiente</fullName><default>true</default><label>Pendiente</label></value>
            <value><fullName>En Transito</fullName><default>false</default><label>En Transito</label></value>
            <value><fullName>Entregada</fullName><default>false</default><label>Entregada</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>