force-app/main/default/objects/Remision__c/fields/Firmada__c.field-meta.xml
<CustomField>
    <fullName>Firmada__c</fullName>
    <label>Firmada</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>