force-app/main/default/objects/Remision__c/fields/Notas__c.field-meta.xml
<CustomField>
    <fullName>Notas__c</fullName>
    <label>Notas</label>
    <type>LongTextArea</type>
    <length>5000</length>
</CustomField>